formularios  sponsor y patrocinio

--- a/src/Vistas/frmiEliminarSponsor.form
+++ b/src/Vistas/frmiEliminarSponsor.form
@@ -114,6 +114,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Eliminar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jButton1MouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JComboBox" name="CboEliminarSponsor">
       <Properties>
@@ -122,7 +125,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Sponsor&gt;"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel34">
@@ -137,13 +140,16 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;Sponsor&gt;"/>
       </AuxValues>
     </Component>
     <Component class="javax.swing.JButton" name="btnActivar1">
       <Properties>
         <Property name="text" type="java.lang.String" value="Activar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnActivar1MouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
