--- a/src/Vistas/frmiAgregarEstadio.form
+++ b/src/Vistas/frmiAgregarEstadio.form
@@ -146,7 +146,11 @@
     <Component class="javax.swing.JComboBox" name="cboCategoria">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="0"/>
+          <StringArray count="3">
+            <StringItem index="0" value="Cesped"/>
+            <StringItem index="1" value="Cemento"/>
+            <StringItem index="2" value="Ladrillo"/>
+          </StringArray>
         </Property>
       </Properties>
       <AuxValues>
@@ -159,6 +163,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Cargar"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="btnCargarMouseClicked"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btnLimpiar">
       <Properties>
